# 360dialog

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
src/app/: config.py  main.py
src/app/bot/: command_types.py
src/app/bot/handlers/: __init__.py  add_event.py  free_time.py  help.py  list_events.py  remove_all_events.py  remove_event.py  update_event.py  utils.py
src/app/bot/parsers/: __init__.py  add_event.py  argparse_wrapper.py  free_time.py  help.py  list_events.py  remove_event.py  update_event.py  utils.py
src/app/clients/: whatsapp.py
src/app/db/: models.py
tests/: script.txt  test_date_parsing_custom.py  test_event_logic.py  test_parsers.py
